feat: implement complete service layer with DTO enhancements and build configuration
## Service Layer Implementation
### Authentication Service
- Create AuthService interface defining registration and login operations
- Implement AuthServiceImpl with JWT authentication, password encoding, and token generation
- Support user persistence and authentication validation workflows

### Product Service
- Create ProductService interface with comprehensive CRUD operations
- Implement ProductServiceImpl with user-based authorization and access control
- Include product creation, updates, deletion, and retrieval with user information enrichment

### User Service
- Create UserService interface for user management operations
- Implement UserServiceImpl with email uniqueness validation and password encoding
- Handle user retrieval, updates, deletion, and DTO mapping

## DTO Enhancements
### Constructor Support
- Add no-arguments and all-arguments constructors to all DTO classes:
  - AuthResponse, LoginRequest, RegisterRequest
  - ProductRequest, ProductResponse
  - UpdateUserRequest, UserResponse
- Improve serialization compatibility with various data mapping libraries
- Enhance testing flexibility with complete constructor coverage

### Property Access Refactoring
- Update service implementations to use proper getter/setter methods for DTO properties
- Improve encapsulation and align with Java bean conventions
- Refactor AuthResponse construction to use setter methods instead of constructor arguments
- Maintain existing business logic while improving code quality

## Security Configuration
### CSRF Protection
- Enable CSRF protection with cookie-based token repository
- Enhance security for state-changing operations
- Maintain stateless JWT authentication with proper CORS configuration

### Code Quality Improvements
- Add null safety annotations to configuration classes
- Improve CORS configuration with method references
- Fix authorization logic for better access control
- Extr